--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "url": "https://github.com/syke2good/DoctorRS/issues"
   },
   "dependencies": {
+    "connect-session-sequelize": "^7.1.2",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-session": "^1.17.2",
     "mysql2": "^2.1.0",
-    "sequelize": "^5.21.7"
+    "sequelize": "^6.12.5"
   },
   "homepage": "https://github.com/syke2good/DoctorRS#readme"
 }
