--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "url": "https://github.com/syke2good/DoctorRS/issues"
   },
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "connect-session-sequelize": "^7.1.2",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
