--- a/seeds/appointmentSeedData.json
+++ b/seeds/appointmentSeedData.json
@@ -1,22 +1,25 @@
 [
     {
       "date": "09/23/2022",
-      "doctor_id": 1,
+      "doctor_id": 1
 
     },
     {
       "date": "01/25/2022",
-      "doctor_id": 3,
+      "doctor_id": 3
+
 
     },
     {
       "date": "02/04/2022",
-      "doctor_id": 1,
+      "doctor_id": 1
+
 
     },
     {
         "date": "01/25/2022",
-        "doctor_id": 2,
+        "doctor_id": 2
+
   
     }
   ]
