--- a/seeds/appointmentSeedData.json
+++ b/seeds/appointmentSeedData.json
@@ -1,23 +1,23 @@
 [
     {
-      "date": "09/23/2022",
+      "date": "09/23/2022 08:30",
       "doctor_id": 1
 
     },
     {
-      "date": "01/25/2022",
+      "date": "10/25/2022 10:30",
       "doctor_id": 3
 
 
     },
     {
-      "date": "02/04/2022",
+      "date": "02/04/2022 01:30",
       "doctor_id": 1
 
 
     },
     {
-        "date": "01/25/2022",
+        "date": "01/25/2022 12:30",
         "doctor_id": 2
 
   
