--- a/package.json
+++ b/package.json
@@ -17,10 +17,11 @@
     "url": "https://github.com/syke2good/DoctorRS/issues"
   },
   "dependencies": {
-    "bcrypt": "^5.0.1",
+    "bcryptjs": "^2.4.3",
     "connect-session-sequelize": "^7.1.2",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-handlebars": "^6.0.2",
     "express-session": "^1.17.2",
     "mysql2": "^2.1.0",
     "sequelize": "^6.12.5"
